[gd_scene load_steps=10 format=2]

[ext_resource path="res://Misc/Sprites/button_restart.png" type="Texture" id=1]
[ext_resource path="res://Misc/Sprites/menu_button_hover.png" type="Texture" id=2]
[ext_resource path="res://Misc/Sprites/button_restart_hover.png" type="Texture" id=3]
[ext_resource path="res://Fonts/orange kid.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Misc/Sprites/menu_button.png" type="Texture" id=5]
[ext_resource path="res://Misc/Game_Over_Multiplayer.gd" type="Script" id=6]
[ext_resource path="res://Sound Effects/mixkit-player-losing-or-failing-2042.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 4 )

[node name="Game_Over_Multiplayer" type="Node2D"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 270.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Over" type="Label" parent="."]
margin_top = 9.0
margin_right = 480.0
margin_bottom = 61.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_x_won" type="Label" parent="."]
margin_top = 92.0
margin_right = 480.0
margin_bottom = 121.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Player 2 won!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Button" type="TextureButton" parent="."]
margin_left = 162.375
margin_top = 164.0
margin_right = 369.375
margin_bottom = 194.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart_Button" type="TextureButton" parent="."]
margin_left = 172.125
margin_top = 200.0
margin_right = 353.125
margin_bottom = 230.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="Menu_Button" to="." method="_on_Menu_Button_pressed"]
[connection signal="pressed" from="Restart_Button" to="." method="_on_Restart_Button_pressed"]
